# rustcraft-rs

./: Cargo.toml  README.md
rustcraft/: Cargo.toml  build.rs
rustcraft/res/scripts/world/: blocks.lua
rustcraft/res/shaders/: basic.frag  basic.shader  basic.vert
rustcraft/src/: camera.rs  entity.rs  input.rs  main.rs  resources.rs  timestep.rs
rustcraft/src/graphics/: bindings.rs  buffer.rs  gl.rs  mesh.rs  mod.rs  renderer.rs  shader.rs  texture.rs
rustcraft/src/script_engine/: mod.rs  terrain.rs
rustcraft/src/world/: block.rs  chunk.rs  mod.rs  terrain_generator.rs
rustcraft/src/world/block/: face.rs  mod.rs
