[package]
name = "rustcraft"
version = "0.1.0"
authors = ["Benjamin Kuen <info@benjamin-kuen.com>"]
license = "GNU GPLv3"
description = "A Minecraft clone written in Rust using OpenGL"
readme = "README.md"
homepage = "rustcraft.zproji.org"
repository = "https://github.com/bkuen/rustcraft-rs"
keywords = ["game", "voxel", "minecraft"]
categories = ["game"]
edition = "2018"

build = "build.rs"

[dependencies]
glfw = "0.39.0"
image = "0.23.8"

[build-dependencies]
gl_generator = "0.14.0"
walkdir = "2.3.1"