[package]
name = "rustcraft"
version = "0.1.0"
authors = ["Benjamin Kuen <info@benjamin-kuen.com>"]
license = "GNU GPLv3"
description = "A Minecraft clone written in Rust using OpenGL"
readme = "README.md"
homepage = "rustcraft.zproji.org"
repository = "https://github.com/bkuen/rustcraft-rs"
keywords = ["game", "voxel", "minecraft"]
categories = ["game"]
edition = "2018"

build = "build.rs"

[dependencies]
cgmath = "0.17.0"
glfw = "0.39.0"
image = "0.23.8"
noise = "0.7.0"
mlua = { version = "0.5", features = ["lua53", "vendored", "serialize"] }
serde = { version = "1.0", features = ["derive"]}

[build-dependencies]
gl_generator = "0.14.0"
walkdir = "2.3.1"